2005-11-30  Robert Jordan  <robertj@gmx.net>

	* ResXResourceReader.cs, ResXResourceWriter.cs: Made string conversions
	culture-invariant.
	* ResXResourceWriter.cs: Fixed AddResource (string, object) to emit
	the type attribute when the object has a type converter.

2005-10-04  Peter Bartok  <pbartok@novell.com>

	* ResXResourceReader.cs, ResXResourceWriter.cs: Added call
	  to GC.SuppressFinalize() in dispose method. Fixes #76330

2005-05-13  Peter Bartok  <pbartok@novell.com>

	* ResXResourceWriter.cs: 
	  - Fixed/Improved AddResource(), now only uses string converter if 
	    the converter supports both directions
	  - Added ability for AddResource(string, object) to detect if
	    a byte[] converter is supported for the object, if so it now calls
	    AddResource(string, byte[]) for those
	  - WriteBytes: Changed to write it's base64 output as pretty 
	    as Microsoft's, inserting newlines every 80 chars
	  - WriteBytes: Added output of mimetype even if type is specified

2005-05-11  Peter Bartok  <pbartok@novell.com>

	* ResXResourceSet.cs: Implemented
	* ResXFileRef.cs: Implemented
	* ResXNullRef.cs: Added missing attribute
	* ResXResourceReader.cs: Implemented missing .ctor()s and other
	  assorted fun stuff, should now be complete
	* ResResourceWriter.cs: Implemented missing methods and added
	  missing static fields

2005-04-14  Jackson Harper  <jackson@ximian.com>

	* ResXResourceReader.cs: Use serialization on values that have a
	mime type set but no type.

2005-02-16  Peter Bartok  <pbartok@novell.com>

	* ResXResourceReader.cs, ResXResourceWriter.cs: Removed sealed
	  attribute from classes

2005-02-12  Geoff Norton  (gnorton@customerdna.com)

	* ResXResourceReader.cs (load_data): Undo previous change as
	ResXNullRef is now properly handled.
	* ResXNullRef.cs: Added
	
2005-02-11  Geoff Norton  (gnorton@customerdna.com)

	* ResXResourceReader.cs (load_data): Temporarily re-introduce the 